vlib/v/checker/tests/generic_type_name_in_non_generic_function.out
vlib/v/checker/tests/generic_type_name_in_non_generic_function.vv:3:10: error: undefined ident: `A`
    1 | fn main() {
    2 |     c := u8(`D`)
    3 |     if c >= A && c <= Z {
      |             ^
    4 |         println('yes')
    5 |     } else {
vlib/v/checker/tests/generic_type_name_in_non_generic_function.vv:3:20: error: undefined ident: `Z`
    1 | fn main() {
    2 |     c := u8(`D`)
    3 |     if c >= A && c <= Z {
      |                       ^
    4 |         println('yes')
    5 |     } else {
vlib/v/checker/tests/generic_type_name_in_non_generic_function.vv:3:5: error: left operand for `&&` is not a boolean
    1 | fn main() {
    2 |     c := u8(`D`)
    3 |     if c >= A && c <= Z {
      |        ~~~~~~
    4 |         println('yes')
    5 |     } else {
vlib/v/checker/tests/generic_type_name_in_non_generic_function.vv:3:15: error: right operand for `&&` is not a boolean
    1 | fn main() {
    2 |     c := u8(`D`)
    3 |     if c >= A && c <= Z {
      |                  ~~~~~~
    4 |         println('yes')
    5 |     } else {
vlib/v/checker/tests/generic_type_name_in_non_generic_function.vv:3:5: error: non-bool type `void` used as if condition
    1 | fn main() {
    2 |     c := u8(`D`)
    3 |     if c >= A && c <= Z {
      |        ~~~~~~~~~~~~~~~~
    4 |         println('yes')
    5 |     } else {
